# Model-Zoo

./: .gitignore  CLAUDE.md  JobAllocation.md  LICENSE  README.md  __init__.py  atlas_metadata.csv  cmp.sh  environment.yml  kinexp.sh  requirements.txt  run_analysis.py  run_distributed_analysis.py  run_script.sh  scatter.py
atlas_results/: AnnaWegmann--Style-Embedding.csv  (+122 more)
gpudispatch/: LICENSE  README.md  pyproject.toml
gpudispatch/docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONTRIBUTING_BACKENDS.md  CONTRIBUTING_PLUGINS.md  CONTRIBUTING_STRATEGIES.md
gpudispatch/src/gpudispatch/: __init__.py  auto.py  decorators.py  profiles.py
gpudispatch/src/gpudispatch/backends/: __init__.py  base.py  local.py  slurm.py
gpudispatch/src/gpudispatch/cli/: __init__.py  main.py
gpudispatch/src/gpudispatch/core/: __init__.py  dispatcher.py  job.py  queue.py  resources.py  signals.py
gpudispatch/src/gpudispatch/experiments/: __init__.py  decorator.py  experiment.py  registry.py  reproducibility.py  results.py  search_space.py  trial.py
gpudispatch/src/gpudispatch/experiments/storage/: __init__.py  base.py  file.py  memory.py  sqlite.py
gpudispatch/src/gpudispatch/experiments/strategies/: __init__.py  base.py  grid.py  random.py
gpudispatch/src/gpudispatch/observability/: __init__.py  hooks.py
gpudispatch/src/gpudispatch/utils/: __init__.py  gpu.py
gpudispatch/tests/unit/: test_auto.py  test_decorators.py  test_profiles.py  test_public_api.py
gpudispatch/tests/unit/backends/: test_base.py  test_local.py  test_slurm.py
gpudispatch/tests/unit/cli/: test_cli.py
gpudispatch/tests/unit/core/: __init__.py  test_dispatcher.py  test_job.py  test_queue.py  test_resources.py  test_signals.py
gpudispatch/tests/unit/experiments/: test_decorator.py  test_experiment.py  test_registry.py  test_reproducibility.py  test_results.py  test_search_space.py  test_trial.py
gpudispatch/tests/unit/observability/: test_hooks.py
gpudispatch/tests/unit/utils/: test_gpu.py
(+25303 files in other folders)
