[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpudispatch"
version = "0.1.0"
description = "Universal GPU orchestration - from laptop to supercomputer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Model-Zoo Team" }
]
keywords = ["gpu", "orchestration", "distributed", "machine-learning", "hpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gpustat>=1.1.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
all = [
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "optuna>=3.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "hypothesis>=6.0.0",
]

# [project.scripts]
# gpudispatch = "gpudispatch.cli.main:main"  # TODO: Uncomment after CLI implementation

[project.urls]
Homepage = "https://github.com/model-zoo/gpudispatch"
Documentation = "https://gpudispatch.readthedocs.io"
Repository = "https://github.com/model-zoo/gpudispatch"

[tool.hatch.build.targets.wheel]
packages = ["src/gpudispatch"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
